--- a/desafios/d009/index.html
+++ b/desafios/d009/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meus vídeos</title>
-    <style>
-        body{
-            background-color: gray;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Vídeos legais para assistir</h1>
