--- a/desafios/d009/python.html
+++ b/desafios/d009/python.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python</title>
-    <style>
-        body{
-            background-color: gray;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Curso de Python</h1>
@@ -16,8 +12,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/S9uPNppGsGo?si=zwYipIofhMSM98ZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <br>
-    <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6" target="_blank" rel="external">Veja o curso completo</a>
-
+    <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6" target="_blank" rel="external" class="youtube">Veja o curso completo</a>
     <br>
     <a href="index.html"><img src="voltar.png" alt="Voltar"></a>
 </body>
