--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Meus Projetos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projetos</title>
 </head>
 <body>
-  <h1>Meus Projetos</h1>
-  <ul>
-    <li><a href="./projeto/projeto-cordel/">Projeto Cordel</a></li>
-    <li><a href="./projeto/projeto-android/">Projeto Android</a></li>
-  </ul>
+    <h1>Meus Projetos</h1>
+    <ul>
+        <li><a href="projetos/projeto-android/index.html">Projeto Android</a></li>
+        <li><a href="projetos/projeto-cordel/index.html">Projeto Cordel</a></li>  
+    </ul>
 </body>
 </html>
