--- a/desafios/d009/index.html
+++ b/desafios/d009/index.html
@@ -12,6 +12,6 @@
     <a href="js.html"><img src="thumb-js.png" alt="JS"></a>
     <br>
     <a href="hardware.html"><img src="thumb-hardware.png" alt="Hardware"></a>
-    <a href="python.html"><img src="thumb-python.png" alt=""></a>
+    <a href="python.html"><img src="thumb-python.png" alt="PYTHON"></a>
 </body>
 </html>
